Move concluion to the conclusion section

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -639,17 +639,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Conclusion (<200 words)"
+    "## 6. Conclusion (<200 words)\n",
+    "\n",
+    "Our report showed that it is theoretically possible to produce Psilocybin in Corynebacterium Glutamicum. Nonetheless, the result from our model is not anywhere near being feasible for large scale production, as we did not manage to improve the Psilocybin production beyond the initial yield of 5.69299883708285e-05 mmol gDW^-1 h^-1, with any of the methods used throughout.\n",
+    "However, the code used in our report could still be useful for a future study, as there were recently published a new version of the Corynebacterium Glutamicum model from Feierabend et al 2021 (iCGB21FR), were our approach and code could be used to compare the new model with the one used in this study. Furthermore, as our results showed, yields are highest when there is no cell growth, as the cells use the Tryptophan needed for Psilocybin to produce proteins needed for growth, suggesting that a good starting point for optimizing production could be to force the fluxes away from other amino acids and towards Tryptophan production; or one could potentially “rob” the cell of Tryptophan by implementing a very fast conversion of Tryptophan to Tryptamine, thereby inhibiting cell growth."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References\n",
-    "\n",
-    "Our report showed that it is theoretically possible to produce Psilocybin in Corynebacterium Glutamicum. Nonetheless, the result from our model is not anywhere near being feasible for large scale production, as we did not manage to improve the Psilocybin production beyond the initial yield of 5.69299883708285e-05 mmol gDW^-1 h^-1, with any of the methods used throughout.\n",
-    "However, the code used in our report could still be useful for a future study, as there were recently published a new version of the Corynebacterium Glutamicum model from Feierabend et al 2021 (iCGB21FR), were our approach and code could be used to compare the new model with the one used in this study. Furthermore, as our results showed, yields are highest when there is no cell growth, as the cells use the Tryptophan needed for Psilocybin to produce proteins needed for growth, suggesting that a good starting point for optimizing production could be to force the fluxes away from other amino acids and towards Tryptophan production; or one could potentially “rob” the cell of Tryptophan by implementing a very fast conversion of Tryptophan to Tryptamine, thereby inhibiting cell growth."
+    "## References"
    ]
   },
   {
