Found the Bottleneck

--- a/Original_Bottleneck_Investigation.ipynb
+++ b/Original_Bottleneck_Investigation.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5f67f2c9",
    "metadata": {
     "scrolled": false
@@ -78,7 +78,7 @@
        "                <td><strong>Name</strong></td><td>tryptophan synthase (indoleglycerol phosphate)</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x022ef2025978</td>\n",
+       "                <td>0x01eee7fa4908</td>\n",
        "            </tr><tr>\n",
        "                <td><strong>Stoichiometry</strong></td>\n",
        "                <td>\n",
@@ -96,10 +96,10 @@
        "        "
       ],
       "text/plain": [
-       "<Reaction TRPS1 at 0x22ef2025978>"
+       "<Reaction TRPS1 at 0x1eee7fa4908>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "90639257",
    "metadata": {},
    "outputs": [
@@ -140,10 +140,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "3898fd65",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -163,7 +163,128 @@
     "    model.objective = target\n",
     "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
     "    for x in model.reactions.query('3ig3p_c','reaction'):\n",
-    "        print(\"%s : %s\" % (x.id, x.flux))    "
+    "        print(\"%s : %s\" % (x.id, x.flux))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "590ef5ed",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
+      "IGPS : 2cpr5p_c + h_c --> 3ig3p_c + co2_c + h2o_c\n",
+      "TRPS1 : 3ig3p_c + ser_L_c --> g3p_c + h2o_c + trp_L_c\n",
+      "TRPS3 : 3ig3p_c --> g3p_c + indole_c\n",
+      "INPSHE : 2cpr5p_c --> 3ig3p_c + co2_c + h2o_c\n"
+     ]
+    }
+   ],
+   "source": [
+    "with model: #input 1 of 2\n",
+    "    model.objective = target\n",
+    "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
+    "    for x in model.reactions.query('3ig3p_c','reaction'):\n",
+    "        print(\"%s : %s\" % (x.id, x.reaction))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a3587121",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
+      "IGPS : 0.09063538000775301\n",
+      "TRPS1 : 0.08063538000775301\n",
+      "TRPS3 : 0.01\n",
+      "INPSHE : 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with model: #input 1 of 2\n",
+    "    model.reactions.TRPS3.bounds=(0.01),(0.01)\n",
+    "    model.objective = target\n",
+    "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
+    "    for x in model.reactions.query('3ig3p_c','reaction'):\n",
+    "        print(\"%s : %s\" % (x.id, x.flux))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ad158556",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tryptophan reactions\n",
+      "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
+      "TRPTRS [mmol gDW^-1 h^-1]: 0.0\n",
+      "TRPS2 [mmol gDW^-1 h^-1]: 0.0\n",
+      "CrTdc [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
+      "TRPS1 [mmol gDW^-1 h^-1]: 0.08063538000775301\n",
+      "TRPt2rpp [mmol gDW^-1 h^-1]: -0.08057845001938219\n",
+      "TRPabcpp [mmol gDW^-1 h^-1]: 0.0\n",
+      "PROTEIN [mmol gDW^-1 h^-1]: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with model:\n",
+    "    model.reactions.TRPS3.bounds=(0.01),(0.01)\n",
+    "    model.objective = target\n",
+    "    print(\"tryptophan reactions\")\n",
+    "    \n",
+    "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
+    "    print(\"TRPTRS [mmol gDW^-1 h^-1]:\",model.reactions.TRPTRS.flux)\n",
+    "    print(\"TRPS2 [mmol gDW^-1 h^-1]:\",model.reactions.TRPS2.flux)\n",
+    "    print(\"CrTdc [mmol gDW^-1 h^-1]:\",model.reactions.CrTdc.flux)\n",
+    "    print(\"TRPS1 [mmol gDW^-1 h^-1]:\",model.reactions.TRPS1.flux)\n",
+    "    print(\"TRPt2rpp [mmol gDW^-1 h^-1]:\",model.reactions.TRPt2rpp.flux)\n",
+    "    print(\"TRPabcpp [mmol gDW^-1 h^-1]:\",model.reactions.TRPabcpp.flux)\n",
+    "    print(\"PROTEIN [mmol gDW^-1 h^-1]:\",model.reactions.PROTEIN.flux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ace1abbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
+      "IGPS : 0.010056929988370829\n",
+      "TRPS1 : 5.69299883708285e-05\n",
+      "TRPS3 : 0.01\n",
+      "INPSHE : 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "with model: #input 1 of 2\n",
+    "    model.reactions.TRPS3.bounds=(0.01),(0.01)\n",
+    "    model.reactions.TRPt2rpp.bounds=(0),(0)\n",
+    "    model.objective = target\n",
+    "    print(\"Max. psi production [mmol gDW^-1 h^-1]:\",model.optimize().objective_value)\n",
+    "    for x in model.reactions.query('3ig3p_c','reaction'):\n",
+    "        print(\"%s : %s\" % (x.id, x.flux))"
    ]
   },
   {
@@ -176,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "5f2d1b90",
    "metadata": {
     "scrolled": true
@@ -189,10 +310,10 @@
       "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
       "SERAT:flux 0.000113859976741657\n",
       "GPDDA3:flux 0.0\n",
-      "GHMT2r:flux 0.00022771995348257009\n",
+      "GHMT2r:flux 0.00022771995348393358\n",
       "PSERT:flux 0.3892699999999998\n",
       "PSP_L:flux 0.3892699999999998\n",
-      "SERD_L:flux 0.3888714900814047\n",
+      "SERD_L:flux 0.38887149008140337\n",
       "PSERtex:flux 0.0\n",
       "SERabcpp:flux 0.0\n",
       "SERt3pp:flux 0.0\n",
@@ -214,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "7da0b315",
    "metadata": {},
    "outputs": [
@@ -258,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "be993e61",
    "metadata": {
     "scrolled": true
@@ -270,7 +391,7 @@
        "'3php_c + glu_L_c --> akg_c + pser_L_c'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "e50d9f55",
    "metadata": {
     "scrolled": true
@@ -293,7 +414,7 @@
        "'h2o_c + pser_L_c --> pi_c + ser_L_c'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "5b376307",
    "metadata": {},
    "outputs": [
@@ -322,7 +443,7 @@
        "'ser_L_c --> nh4_c + pyr_c'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "505e3ae2",
    "metadata": {
     "scrolled": true
@@ -352,7 +473,7 @@
      "output_type": "stream",
      "text": [
       "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
-      "Theoretical max. yield [mmol-psi / mmol-gl]: 1.3830396904616058e-05\n"
+      "Theoretical max. yield [mmol-psi / mmol-gl]: 1.372441506853277e-05\n"
      ]
     }
    ],
@@ -375,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "2011e8ed",
    "metadata": {
     "scrolled": false
@@ -386,9 +507,9 @@
      "output_type": "stream",
      "text": [
       "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
-      "SERAT:flux 0.00011385997674168147\n",
+      "SERAT:flux 0.105209874431619\n",
       "GPDDA3:flux 0.0\n",
-      "GHMT2r:flux 0.3790992100348873\n",
+      "GHMT2r:flux 0.27400319558000996\n",
       "PSERT:flux 0.3892699999999998\n",
       "PSP_L:flux 0.3892699999999998\n",
       "SERD_L:flux 0.01\n",
@@ -422,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "9ace64e4",
    "metadata": {},
    "outputs": [
@@ -432,7 +553,7 @@
        "'ser_L_c + thf_c <=> gly_c + h2o_c + mlthf_c'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "e8817303",
    "metadata": {
     "scrolled": true
@@ -454,7 +575,7 @@
      "output_type": "stream",
      "text": [
       "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
-      "SERAT:flux 0.019658420069773808\n",
+      "SERAT:flux 0.019658420069775046\n",
       "GPDDA3:flux 0.0\n",
       "GHMT2r:flux 0.01\n",
       "PSERT:flux 0.3892699999999998\n",
@@ -462,10 +583,10 @@
       "SERD_L:flux 0.01\n",
       "PSERtex:flux 0.0\n",
       "SERabcpp:flux 0.0\n",
-      "SERt3pp:flux 0.34955464994185514\n",
+      "SERt3pp:flux 0.29344543990696625\n",
       "SERTRS:flux 0.0\n",
       "SERTRS2:flux 0.0\n",
-      "TRPS1:flux 5.69299883708285e-05\n",
+      "TRPS1:flux 0.056166140023258454\n",
       "TRPS2:flux 0.0\n",
       "PROTEIN:flux 0.0\n"
      ]
@@ -483,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "72b7a855",
    "metadata": {
     "scrolled": true
@@ -495,7 +616,7 @@
        "'h_e + ser_L_c --> h_c + ser_L_e'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,16 +627,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "4c166214",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Max. psi production [mmol gDW^-1 h^-1]: 5.69299883708285e-05\n",
-      "SERAT:flux 0.35921307001162894\n",
+      "SERAT:flux 0.164151698797754\n",
       "GPDDA3:flux 0.0\n",
       "GHMT2r:flux 0.01\n",
       "PSERT:flux 0.3892699999999998\n",
@@ -526,7 +649,7 @@
       "SERt3pp:flux 0.01\n",
       "SERTRS:flux 0.0\n",
       "SERTRS2:flux 0.0\n",
-      "TRPS1:flux 5.69299883708285e-05\n",
+      "TRPS1:flux 0.19511830120224577\n",
       "TRPS2:flux 0.0\n",
       "PROTEIN:flux 0.0\n"
      ]
@@ -545,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "8dfdc305",
    "metadata": {
     "scrolled": false
@@ -557,7 +680,7 @@
        "'accoa_c + ser_L_c --> acser_c + coa_c'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "b8dfa9d2",
    "metadata": {
     "scrolled": false
@@ -626,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "0476b048",
    "metadata": {
     "scrolled": false
@@ -669,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "7a6cea25",
    "metadata": {},
    "outputs": [
@@ -679,7 +802,7 @@
        "'h_e + trp_L_e <-- h_c + trp_L_c'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "59877ace",
    "metadata": {
     "scrolled": false
@@ -741,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "2c0ba886",
    "metadata": {},
    "outputs": [
@@ -751,7 +874,7 @@
        "'3ig3p_c + ser_L_c --> g3p_c + h2o_c + trp_L_c'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "id": "b3a3ee22",
    "metadata": {
     "scrolled": true
@@ -779,13 +902,13 @@
     {
      "data": {
       "text/plain": [
-       "[<Reaction IGPS at 0x22ef2016860>,\n",
-       " <Reaction TRPS1 at 0x22ef2025978>,\n",
-       " <Reaction TRPS3 at 0x22ef2025e48>,\n",
-       " <Reaction INPSHE at 0x22ef2031550>]"
+       "[<Reaction IGPS at 0x1eee7f957f0>,\n",
+       " <Reaction TRPS1 at 0x1eee7fa4908>,\n",
+       " <Reaction TRPS3 at 0x1eee7fa4dd8>,\n",
+       " <Reaction INPSHE at 0x1eee7fb14e0>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "0176cdf3",
    "metadata": {},
    "outputs": [
@@ -840,15 +963,15 @@
       "G3PAT181 : 0.0\n",
       "LPLIPAL1A180pp : 0.0\n",
       "FBA : 3.39087\n",
-      "GAPD : 7.20853\n",
-      "TPI : 3.1829846199922467\n",
+      "GAPD : 7.37268\n",
+      "TPI : 3.3881408059150617\n",
       "IG3PS : 0.0\n",
       "IGPDH : 0.0\n",
-      "TALA : 0.6346753800077526\n",
-      "TKT1 : 0.6346753800077526\n",
-      "TKT2 : 0.439557078805507\n",
-      "IGPS : 0.19511830120224563\n",
-      "TRPS1 : 0.19511830120224563\n",
+      "TALA : 0.6519100000000001\n",
+      "TKT1 : 0.6519100000000001\n",
+      "TKT2 : 0.54404\n",
+      "IGPS : 0.049629194084938044\n",
+      "TRPS1 : 0.049629194084938044\n",
       "TRPS3 : 0.0\n",
       "INPSHE : 0.0\n"
      ]
@@ -864,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "36a97d50",
    "metadata": {},
    "outputs": [
