--- a/8._FSEOF-Copy1.ipynb
+++ b/8._FSEOF-Copy1.ipynb
@@ -1467,8 +1467,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "9909b60c-37aa-4423-9df8-9331f6cd7d0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACHMSC 0.56609314274949\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\fjarios\\Anaconda3\\envs\\carveme_ex5\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PPA 0.019372413200405142\n",
+      "G1PACT 5.69299883708285e-05\n",
+      "G1SAT 5.69299883708285e-05\n",
+      "GLUTRR 5.69299883708285e-05\n",
+      "PPBNGS 5.69299883708285e-05\n",
+      "SERAT 0.0\n",
+      "MTHFR2 0.2830465713747456\n",
+      "GLNS 0.019372413200434896\n",
+      "CYSTL 0.28304657137474565\n",
+      "HSST 0.28304657137474565\n",
+      "METS 0.28304657137474565\n",
+      "ADK1 5.69299883708285e-05\n",
+      "GK1 0.30995861120650414\n",
+      "GTPHs 0.019372413201725752\n",
+      "NDPK1 5.69299883708285e-05\n",
+      "NTPP11 0.30995861120740653\n",
+      "NADPHQR2 0.7830517965988405\n",
+      "GMPS2 0.3099586112062964\n",
+      "GLUTRS 5.69299883708285e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Overexpression of all targets identified within FSEOF\n",
+    "production_overproduction_targets = []\n",
+    "for reaction_id in Reactions:\n",
+    "   with model:\n",
+    "        model.objective = model.reactions.EX_psi_e # setting objective to our product\n",
+    "        model.reactions.get_by_id(reaction_id).lower_bound = model.reactions.get_by_id(reaction_id).upper_bound # forcing the model to overexpress the respective reaction\n",
+    "        production_overproduction_targets.append(model.optimize().objective_value)\n",
+    "        print(reaction_id, model.optimize().objective_value)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4663e958-12e8-440d-b80d-d15c45a4baa7",
    "metadata": {},
    "outputs": [],
    "source": []
