--- a/09._Manually_selected_targets.ipynb
+++ b/09._Manually_selected_targets.ipynb
@@ -38,8 +38,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Maximum theoretical productivity of psilocybin: 5.6929988370778216e-05 mmol/gDW*h\n",
-      "Theoretical max. yield of psilocybin: 1.329527959578845e-05 mmol-lyco / mmol-glc\n"
+      "Maximum theoretical productivity of psilocybin: 5.69299883708285e-05 mmol/gDW*h\n",
+      "Theoretical max. yield of psilocybin: 1.3830396904616058e-05 mmol-lyco / mmol-glc\n"
      ]
     }
    ],
@@ -101,14 +101,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Knocking everything out besides CrTdc reaction and synthesis reactions, which goes towards our product:  5.6929988370778216e-05 mmol/gDW*h\n"
+      "Knocking everything out besides CrTdc reaction and synthesis reactions, which goes towards our product:  0.44080307001166996 mmol/gDW*h\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\tamwei\\Anaconda3\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "C:\\Users\\fjarios\\Anaconda3\\envs\\carveme_ex5\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
       "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
      ]
     }
@@ -144,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.692998837082858e-05\n"
+      "5.69299883708285e-05\n"
      ]
     }
    ],
@@ -174,12 +174,12 @@
     {
      "data": {
       "text/plain": [
-       "[5.692998837082858e-05,\n",
-       " 5.692998837082858e-05,\n",
-       " 5.692998837082858e-05,\n",
-       " 5.692998837082858e-05,\n",
-       " 5.6929988370828564e-05,\n",
-       " 5.6929988370828564e-05,\n",
+       "[5.69299883708285e-05,\n",
+       " 5.69299883708285e-05,\n",
+       " 5.69299883708285e-05,\n",
+       " 5.69299883708285e-05,\n",
+       " 5.69299883708285e-05,\n",
+       " 5.69299883708285e-05,\n",
        " 0.0]"
       ]
      },
@@ -211,13 +211,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TRPabcpp 0.0\n",
-      "TRPt2rpp 5.6929988370828415e-05\n",
-      "TRPTRS 5.6929988370828415e-05\n",
-      "TRPS1 5.6929988370828415e-05\n",
-      "TRPS2 5.6929988370828415e-05\n",
-      "PROTEIN 3.5236570605778894e-19\n",
-      "CrTdc 5.69299883708285e-05\n"
+      "TRPabcpp 0.01937241320052349\n",
+      "TRPt2rpp 5.69299883708285e-05\n",
+      "TRPTRS 5.69299883708285e-05\n",
+      "TRPS1 0.008077078805507176\n",
+      "TRPS2 0.008077078805510396\n",
+      "PROTEIN 0.0\n",
+      "CrTdc 999.9999430700116\n"
      ]
     }
    ],
@@ -271,43 +271,43 @@
        "      <th>0</th>\n",
        "      <td>TRPabcpp</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>0.019372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>TRPt2rpp</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>5.692999e-05</td>\n",
+       "      <td>0.000057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>TRPTRS</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>5.692999e-05</td>\n",
+       "      <td>0.000057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>TRPS1</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>5.692999e-05</td>\n",
+       "      <td>0.008077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>TRPS2</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>5.692999e-05</td>\n",
+       "      <td>0.008077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>PROTEIN</td>\n",
        "      <td>0.000057</td>\n",
-       "      <td>3.523657e-19</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>CrTdc</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>5.692999e-05</td>\n",
+       "      <td>999.999943</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -324,13 +324,13 @@
        "6       CrTdc                                           0.000000      \n",
        "\n",
        "   psilocybin_production [mmol/gDW*h], when over-produced  \n",
-       "0                                       0.000000e+00       \n",
-       "1                                       5.692999e-05       \n",
-       "2                                       5.692999e-05       \n",
-       "3                                       5.692999e-05       \n",
-       "4                                       5.692999e-05       \n",
-       "5                                       3.523657e-19       \n",
-       "6                                       5.692999e-05       "
+       "0                                           0.019372       \n",
+       "1                                           0.000057       \n",
+       "2                                           0.000057       \n",
+       "3                                           0.008077       \n",
+       "4                                           0.008077       \n",
+       "5                                           0.000000       \n",
+       "6                                         999.999943       "
       ]
      },
      "execution_count": 10,
@@ -395,79 +395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "ae96cb52",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ACHMSC 5.69299883708285e-05\n",
-      "G1PACT 5.69299883708285e-05\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\tamwei\\Anaconda3\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
-      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PGAMT 5.69299883708285e-05\n",
-      "SERAT 9.754102287778158e-16\n",
-      "MTHFR2 5.69299883708285e-05\n",
-      "GLNS 0.0\n",
-      "CYSTL 0.0\n",
-      "HSST 0.0\n",
-      "METS 0.0\n",
-      "ADK1 5.69299883708285e-05\n",
-      "CYTK1 8.245815711310094e-16\n",
-      "CYTK2 8.245815711310094e-16\n",
-      "GK1 0.0\n",
-      "NDPK1 5.69299883708285e-05\n",
-      "RNDR3 0.0\n",
-      "CTPS2 0.0\n",
-      "GMPS2 0.0\n",
-      "CrTdc 5.692998837081298e-05\n",
-      "psiH 5.692998837081298e-05\n",
-      "psiK 5.692998837081298e-05\n",
-      "psiM 5.692998835127305e-05\n",
-      "psiM2 5.6929988431875245e-05\n",
-      "psitpp 5.692998831818841e-05\n",
-      "EX_psi_e 5.692998831818841e-05\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Overexpression of all targets identified within FSEOF\n",
-    "targets = ['ACHMSC', 'G1PACT','PGAMT','SERAT','MTHFR2','GLNS','CYSTL','HSST','METS','ADK1','CYTK1','CYTK2','GK1','NDPK1','RNDR3','CTPS2','GMPS2','CrTdc','psiH','psiK','psiM','psiM2','psitpp','EX_psi_e']\n",
-    "production_overproduction_targets = []\n",
-    "for reaction_id in targets:\n",
-    "   with model:\n",
-    "        model.objective = model.reactions.EX_psi_e # setting objective to our product\n",
-    "        model.reactions.get_by_id(reaction_id).lower_bound = model.reactions.get_by_id(reaction_id).upper_bound # forcing the model to overexpress the respective reaction\n",
-    "        production_overproduction_targets.append(model.optimize().objective_value)\n",
-    "        print(reaction_id, model.optimize().objective_value)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6bd2aa16",
-   "metadata": {},
-   "source": [
-    "Testing overexpression of identified targets (via FSEOF), does also not result in higher theoretical max yield. The highest achieved yield is ~5.7e-05 and thus not increased to the original yield."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "c002f9d8",
+   "id": "64bd28f7-c687-4db6-a1f8-8a570a693e57",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -475,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -489,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
