Inserted Discussion and Conclusion + Ref

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -632,7 +632,10 @@
    "source": [
     "## 5. Discussion (<500 words)\n",
     "\n",
-    " - Something about the recently published model"
+    "The objective of this project was the heterologous production of psilocybin as a L-tryptophan derived product. A search for pathways using the Cameo package for heterologous pathway prediction did not result in a suggested pathway[1]. This is due to the missing metabolite “psilocybin” in the pathway_predictor_obj.universal_model.metabolites. Therefore, it was continued with the published pathway introduced previously for psilocybin production in *S.cerevisiae*[2]. The heterologous pathway was added to the model iCW773[3]. The maximum production rate resulted in ~5.7e-05 mmol gDW^-1 h^-1. This seemed to be a promising starting point, since this indicated potential for optimizing the yield of psilocybin. Moreover, the model revealed that psilocybin production reached its possible maximum when the cell is not growing. This also was expected, because L-tryptophan is used by growth-related reactions such as protein production or the synthesis of tryptophan t-RNAS.\n",
+    "Within this project several optimization strategies were tested such as optimization of the media via addition of amino acids or increasing the amount of glucose present in the media. Both strategies did not result in any increase of production rate. Since L-tryptophan is consumed during the first step of the heterologous psilocybin production, the addition of it to the media is expected to result in an increase of the production rate, however this did not result in an increase of psilocybin production rate. Furthermore, the python package cameo provides algorithms for the identification of potential targets for cell-factory engineering[1]. Within this project we tested OptGene, OptKnock and Co-factor swapping. All three algorithms did not return any targets. \n",
+    "In order to identify targets for up- or downregulation a FSEOF analysis was performed. This resulted in a list of targets, 7 out of 24 are reactions of the heterologous pathway. However, when overexpression of single targets was performed, by setting the lower bound equal to the higher bound, it had no positive effect on the psilocybin production rate. It was decided to simulate overexpression in this way, since the bounds set in the model iCW773 seemed to be quite realistic, because they were set with very precise float numbers. The knockout of these targets, did not result in any optimization as well. As an additional approach we selected targets manually. For this, all reactions including L-tryptophan (from cytoplasm) were selected. These targets were then tested for either overexpression or knock-out, resulting in no increase of psilocybin production. \n",
+    "As a final investigation, we intended to identify the bottleneck, which is limiting all our optimization approaches for the production of psilocybin using *C. glutamicum*.  In order to achieve this, we tested adding each step of the heterologous pathway as demand functions and tested whether the production of the respective metabolite turns into 0. We could identify the reactions using SAM as co-factor as bottlenecks. By looking further into this we found the boundaries for SAM production from methionine as limiting factor, since they were set to 0 and ~0.0001. By increasing the higher bound we could enable more production of psilocybin. However, this approach is not desirable, because the authors, which created iCW773 used experimental data from 13C-tracer experiments to set the bounds[3]. \n"
    ]
   },
   {
@@ -641,8 +644,8 @@
    "source": [
     "## 6. Conclusion (<200 words)\n",
     "\n",
-    "Our report showed that it is theoretically possible to produce Psilocybin in Corynebacterium Glutamicum. Nonetheless, the result from our model is not anywhere near being feasible for large scale production, as we did not manage to improve the Psilocybin production beyond the initial yield of 5.69299883708285e-05 mmol gDW^-1 h^-1, with any of the methods used throughout.\n",
-    "However, the code used in our report could still be useful for a future study, as there were recently published a new version of the Corynebacterium Glutamicum model from Feierabend et al 2021 (iCGB21FR), were our approach and code could be used to compare the new model with the one used in this study. Furthermore, as our results showed, yields are highest when there is no cell growth, as the cells use the Tryptophan needed for Psilocybin to produce proteins needed for growth, suggesting that a good starting point for optimizing production could be to force the fluxes away from other amino acids and towards Tryptophan production; or one could potentially “rob” the cell of Tryptophan by implementing a very fast conversion of Tryptophan to Tryptamine, thereby inhibiting cell growth."
+    "Our report showed that it is theoretically possible to produce Psilocybin in *Corynebacterium glutamicum*. Nonetheless, the result obtained with the model iCW773 is not anywhere near being feasible for large scale production, as none of the tested optimization strategies could  improve the Psilocybin production beyond the initial yield of ~5.7e-05 mmol gDW^-1 h^-1.  A deeper investiagtion toward the bottleneck of our production reveiled that the co-factor SAM, which is used for two steps of the heterologous pathway is limiting the production.  The bounds for synthesis of SAM from methionin are set to a low level (0 and 0.0001), but on the basis of experimental data and thus could be easily optimized within this project.\n",
+    "However, the code used in our report could still be useful for a future study, as there was recently published a new version of the *Corynebacterium glutamicum* model from Feierabend et al 2021 (iCGB21FR). Interestingly Feierabend et al., 2021 commented on iCW773 as a model to be used with caution due to reconstruction inconsistencies and incorrect metabolites. The approach of producing psilocybin via the cell-factory *C. glutamicum * could be further investigated in a future project by using the new “high-quality” model iCGB21FR [4]."
    ]
   },
   {
@@ -752,6 +755,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### References used for Discussion and conclusion:\n",
+    "1. \tCardoso JGR, Jensen K, Lieven C, et al. Cameo: A Python Library for Computer Aided Metabolic Engineering and Optimization of Cell Factories. ACS Synth Biol. 2018;7(4):1163-1166. doi:10.1021/acssynbio.7b00423\n",
+    "2. \tMilne N, Thomsen P, Mølgaard Knudsen N, Rubaszka P, Kristensen M, Borodina I. Metabolic engineering of Saccharomyces cerevisiae for the de novo production of psilocybin and related tryptamine derivatives. Metab Eng. 2020;60. doi:10.1016/j.ymben.2019.12.007\n",
+    "3. \tZhang Y, Cai J, Shang X, et al. A new genome-scale metabolic model of Corynebacterium glutamicum and its application. Biotechnol Biofuels. 2017;10(1). doi:10.1186/s13068-017-0856-3\n",
+    "4. \tMartina F, Alina R, Elisabeth Z, Katharina N, Wolfgang W, Dräger A. High-Quality Genome-Scale Reconstruction of Corynebacterium glutamicum ATCC 13032. Front Microbiol. 2021;12. doi:https://doi.org/10.3389/fmicb.2021.750206\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -761,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -775,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
