Added the Bottleneck section in the report

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='5._Predict_heterologous_pathways.ipynb' target='_blank'>5._Predict_heterologous_pathways.ipynb</a><br>"
+       "Path (<tt>5._Predict_heterologous_pathways.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\5._Predict_heterologous_pathways.ipynb"
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='4._Production_Rate_Overview.ipynb' target='_blank'>4._Production_Rate_Overview.ipynb</a><br>"
+       "Path (<tt>4._Production_Rate_Overview.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\4._Production_Rate_Overview.ipynb"
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='3._Phenotype_Phase_Plane_Psilocybin.ipynb' target='_blank'>3._Phenotype_Phase_Plane_Psilocybin.ipynb</a><br>"
+       "Path (<tt>3._Phenotype_Phase_Plane_Psilocybin.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\3._Phenotype_Phase_Plane_Psilocybin.ipynb"
@@ -409,7 +409,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='8._FSEOF.ipynb' target='_blank'>8._FSEOF.ipynb</a><br>"
+       "Path (<tt>8._FSEOF.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\8._FSEOF.ipynb"
@@ -439,7 +439,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='Manually_selected_targets.ipynb' target='_blank'>Manually_selected_targets.ipynb</a><br>"
+       "Path (<tt>Manually_selected_targets.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
@@ -499,7 +499,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='Manually_selected_targets.ipynb' target='_blank'>Manually_selected_targets.ipynb</a><br>"
+       "Path (<tt>Manually_selected_targets.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\Manually_selected_targets.ipynb"
@@ -538,7 +538,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
+       "Path (<tt>7_Gene_Optimization.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
@@ -570,7 +570,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='7_Gene_Optimization.ipynb' target='_blank'>7_Gene_Optimization.ipynb</a><br>"
+       "Path (<tt>7_Gene_Optimization.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\7_Gene_Optimization.ipynb"
@@ -604,7 +604,7 @@
     {
      "data": {
       "text/html": [
-       "<a href='6._Cofactor_swapping.ipynb' target='_blank'>6._Cofactor_swapping.ipynb</a><br>"
+       "Path (<tt>6._Cofactor_swapping.ipynb</tt>) doesn't exist. It may still be in the process of being generated, or you may have the incorrect path."
       ],
       "text/plain": [
        "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\6._Cofactor_swapping.ipynb"
@@ -624,6 +624,44 @@
    "metadata": {},
    "source": [
     "None of the algorithms OptGene, OptKnock and Co-factor swapping did result in any identified targets for gene modulation. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.9 Bottleneck\n",
+    "\n",
+    "A cursory investigation of the reactions limiting the rate of psilocybin production was completed. Comparing the rate of production of each metabolite from tryptophan to psilocybin, by setting individual demand-functions and model objective targets, it was found that baeocystin production was limiting. The reaction in question converted S‐Adenosyl‐l‐Methionine (SAM) and norbaeocystin to S‐Adenosyl‐l‐homocysteine (SAH) and baeocystin.  \n",
+    "\n",
+    "The introduction of a SAH demand function increased the production rate from 0 to 1.1e-4 mmol/gDW/h, and it was found that model would otherwise cause SAH to accumulate.  \n",
+    "\n",
+    "The experimentally determined bounds for SAM production from L-methionine was found to match this production rate. It was found by increasing the upper bound, the rate of baeocystin production would increase to 0.201mmol/gDW/h. This could be further increased to 0.212mmol/gDW/h by the addition of methionine to the medium. \n",
+    "\n",
+    "As the production of psilocybin from baeocystin likewise required the conversion of SAM to SAH, the production rates were found to be 0.115mmol/gDW/h without methionine media, and 0.176mmol/gDW/h with. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<a href='10._Bottleneck.ipynb' target='_blank'>10._Bottleneck.ipynb</a><br>"
+      ],
+      "text/plain": [
+       "C:\\Users\\runed\\Desktop\\group-assignment-2021-Group-13-Psilocybin-production-in-Corynebacterium-glutamicum\\10._Bottleneck.ipynb"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FileLink(\"10._Bottleneck.ipynb\")"
    ]
   },
   {
@@ -777,7 +815,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -791,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
